# limes

./: .gitignore  LICENSE  README.md  nixpacks.toml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
contracts/: LimesRegistry.sol
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: pow-worker.js
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/scan/: layout.tsx  page.tsx
frontend/src/app/web/: layout.tsx  page.tsx
lime/: __init__.py  __main__.py  app.py  art.py  config.py  crypto.py  encryption.py  message.py  network.py  registry.py  relay.py  scanner.py  store.py  tui.py  wallet.py
